--- a/resources/composer.json
+++ b/resources/composer.json
@@ -4,7 +4,8 @@
   "require": {
     "guzzlehttp/guzzle": "^6.2.1",
     "ec-europa/oe-poetry-client": "0.3.5",
-    "drupol/drupal7_psr3_watchdog": "^1.0"
+    "drupol/drupal7_psr3_watchdog": "^1.0",
+    "jasig/phpcas ": "^1.3.5"
   },
   "require-dev": {
     "behat/behat": "~3.1.0@rc",
